# mailocase

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/mailocase/: config.py  mail.py  render.py
src/mailocase/commands/: draft.py  list.py  send.py
src/mailocase/templates/: style.css
