[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "mailocase"
version = "0.1.2"
description = "Locally emulate a mailing list and render it into a static website"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
mailocase = "mailocase.__main__:main"

